--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "global": "^4.4.0",
     "joi": "^17.5.0",
     "module-alias": "^2.2.2",
+    "mongoose": "^6.1.4",
     "node": "^17.3.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
@@ -29,6 +30,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.9",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.7",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
