Removing extra libraries, serving pages

--- a/package.json
+++ b/package.json
@@ -8,19 +8,15 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.6",
-    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "faker": "^5.5.3",
     "global": "^4.4.0",
     "joi": "^17.5.0",
     "module-alias": "^2.2.2",
     "mongoose": "^6.1.4",
     "node": "^17.3.0",
-    "passport": "^0.5.2",
-    "passport-local": "^1.0.0",
+    "pug": "^3.0.2",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.4.0",
     "tsc": "^2.0.3",
@@ -29,7 +25,6 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/faker": "^5.5.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.7",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
