--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "global": "^4.4.0",
     "joi": "^17.5.0",
     "module-alias": "^2.2.2",
     "mongoose": "^6.1.4",
     "node": "^17.3.0",
-    "pug": "^3.0.2",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.4.0",
     "tsc": "^2.0.3",
