--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "author": "Naman Gogia <namangogia2001@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/client-sessions": "^0.8.3",
     "bcrypt": "^5.0.1",
+    "client-sessions": "^0.8.0",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
