--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "global": "^4.4.0",
+    "helmet": "^5.0.1",
     "joi": "^17.5.0",
     "module-alias": "^2.2.2",
     "mongoose": "^6.1.4",
